<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    tools:showIn="@layout/activity_home">

    <TextView
        android:id="@+id/explain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explanation" />

    <ToggleButton
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/explain"
        android:textOff="MOCK"
        android:textOn="RETROFIT" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toggle"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/fetch_issues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="Fetch Git Issues" />

        <EditText
            android:id="@+id/owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Owner" />

        <EditText
            android:id="@+id/repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Repo" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_issues_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_issues_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container" />
</RelativeLayout>